--- a/src/client_ui/test.form
+++ b/src/client_ui/test.form
@@ -1,18 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="client_ui.test">
-  <grid id="27dc6" binding="myPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="693" height="800"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="693" height="800"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="15086" class="javax.swing.JButton" binding="myButton">
+      <grid id="1fe60" binding="butttonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="South"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="9f2a5" class="javax.swing.JButton" binding="TESTButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="TEST"/>
+            </properties>
+          </component>
+          <component id="2e2a9" class="javax.swing.JButton" binding="ROOMAVAILABILITYButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="ROOM AVAILABILITY"/>
+            </properties>
+          </component>
+          <component id="380af" class="javax.swing.JButton" binding="NEWROOMButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="NEW ROOM"/>
+            </properties>
+          </component>
+          <component id="39fc2" class="javax.swing.JButton" binding="VIEWROOMSButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="VIEW ROOMS"/>
+            </properties>
+          </component>
+          <component id="f2120" class="javax.swing.JButton" binding="TIMETABLEButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="TIMETABLE"/>
+            </properties>
+          </component>
+          <component id="a580e" class="javax.swing.JButton" binding="NEWBOOKINGButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="NEW BOOKING"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="2c400" binding="paramPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="West"/>
+        <properties>
+          <minimumSize width="92" height="800"/>
+          <preferredSize width="200" height="600"/>
+        </properties>
+        <border type="none" title="PARAMS"/>
+        <children>
+          <component id="ce05e" class="javax.swing.JButton" binding="ENTERButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="ENTER"/>
+            </properties>
+          </component>
+          <vspacer id="58eea">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
+      </grid>
+      <grid id="10f6c" binding="outputPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties>
-          <text value="Button"/>
+          <minimumSize width="34" height="800"/>
+          <preferredSize width="700" height="600"/>
         </properties>
-      </component>
+        <border type="none" title="OUTPUT"/>
+        <children>
+          <vspacer id="c3e4d">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
+      </grid>
+      <scrollpane id="f47a1">
+        <constraints border-constraint="North"/>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </scrollpane>
     </children>
   </grid>
 </form>
