--- a/src/client_ui/test.form
+++ b/src/client_ui/test.form
@@ -82,7 +82,7 @@
               <text value="ENTER"/>
             </properties>
           </component>
-          <component id="99427" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="99427" class="javax.swing.JTextField" binding="dF1">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -90,7 +90,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="1249c" class="javax.swing.JLabel">
+          <component id="1249c" class="javax.swing.JLabel" binding="t_dF1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -98,7 +98,7 @@
               <text value="Dynamic Field 1"/>
             </properties>
           </component>
-          <component id="19fde" class="javax.swing.JLabel">
+          <component id="19fde" class="javax.swing.JLabel" binding="t_dF2">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -106,7 +106,7 @@
               <text value="Dynamic Field 2"/>
             </properties>
           </component>
-          <component id="4dec9" class="javax.swing.JLabel">
+          <component id="4dec9" class="javax.swing.JLabel" binding="t_dF4">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -114,7 +114,7 @@
               <text value="Dynamic Field 4"/>
             </properties>
           </component>
-          <component id="24db1" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="24db1" class="javax.swing.JTextField" binding="dF2">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -122,7 +122,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="141a3" class="javax.swing.JLabel">
+          <component id="141a3" class="javax.swing.JLabel" binding="t_dF3">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -130,7 +130,7 @@
               <text value="Dynamic Field 3"/>
             </properties>
           </component>
-          <component id="79205" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+          <component id="79205" class="javax.swing.JTextField" binding="dF3">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -138,7 +138,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="f1e62" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="f1e62" class="javax.swing.JTextField" binding="dF4">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
