--- a/src/client_ui/test.form
+++ b/src/client_ui/test.form
@@ -20,7 +20,10 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="TEST"/>
+              <toolTipText value="Run tests"/>
             </properties>
           </component>
           <component id="2e2a9" class="javax.swing.JButton" binding="ROOMAVAILABILITYButton" default-binding="true">
@@ -28,7 +31,10 @@
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="ROOM AVAILABILITY"/>
+              <toolTipText value="Check room availability"/>
             </properties>
           </component>
           <component id="380af" class="javax.swing.JButton" binding="NEWROOMButton" default-binding="true">
@@ -36,7 +42,10 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="NEW ROOM"/>
+              <toolTipText value="Create a new room"/>
             </properties>
           </component>
           <component id="39fc2" class="javax.swing.JButton" binding="VIEWROOMSButton" default-binding="true">
@@ -44,7 +53,10 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="VIEW ROOMS"/>
+              <toolTipText value="View the available rooms"/>
             </properties>
           </component>
           <component id="f2120" class="javax.swing.JButton" binding="TIMETABLEButton" default-binding="true">
@@ -52,7 +64,10 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="TIMETABLE"/>
+              <toolTipText value="Get a timetable"/>
             </properties>
           </component>
           <component id="a580e" class="javax.swing.JButton" binding="NEWBOOKINGButton" default-binding="true">
@@ -60,19 +75,22 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12482050"/>
+              <foreground color="-1"/>
               <text value="NEW BOOKING"/>
+              <toolTipText value="Make a new booking!"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="2c400" binding="paramPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2c400" binding="paramPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="West"/>
         <properties>
           <minimumSize width="92" height="800"/>
           <preferredSize width="200" height="600"/>
         </properties>
-        <border type="none" title="PARAMS"/>
+        <border type="none" title="Options"/>
         <children>
           <scrollpane id="e91fe">
             <constraints>
@@ -83,7 +101,11 @@
             <children>
               <grid id="eb5f0" layout-manager="GridBagLayout">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <autoscrolls value="true"/>
+                  <background color="-3547394"/>
+                  <focusTraversalPolicyProvider value="true"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="99427" class="javax.swing.JTextField" binding="dF1">
@@ -164,10 +186,26 @@
           </scrollpane>
           <component id="ce05e" class="javax.swing.JButton" binding="ENTERButton" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-30891"/>
+              <doubleBuffered value="true"/>
+              <foreground color="-1"/>
               <text value="ENTER"/>
+              <toolTipText value="Confirm changes"/>
+            </properties>
+          </component>
+          <component id="8156c" class="javax.swing.JButton" binding="clearButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-30891"/>
+              <foreground color="-1"/>
+              <selected value="false"/>
+              <text value="CLEAR OUTPUT WINDOW"/>
+              <toolTipText value="Remove text in output window"/>
             </properties>
           </component>
         </children>
@@ -179,7 +217,7 @@
           <minimumSize width="34" height="800"/>
           <preferredSize width="700" height="600"/>
         </properties>
-        <border type="none" title="OUTPUT"/>
+        <border type="none" title="Output area"/>
         <children>
           <scrollpane id="626c5">
             <constraints>
